Update contact email and phone details in localization files; comment out phone display in ContactForm and Footer components

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -24,7 +24,7 @@
   "contact.subtitle": "From AI integrations to full-stack engineering, we design solutions that help companies move faster, scale smarter, and operate with clarity. Tell us what you need and we will help you shape the right strategy.",
   "contact.getInTouch": "Get in touch",
   "contact.email": "Email",
-  "contact.emailAddress": "contact@sakaiintelligence.com",
+  "contact.emailAddress": "contact@sakai-intelligence.com",
   "contact.nameRequired": "Name is required",
   "contact.nameMax": "Name must be less than 100 characters",
   "contact.invalidEmail": "Invalid email address",
@@ -43,7 +43,7 @@
   "footer.processAuto": "Process automation",
   "footer.techConsult": "Technical consulting",
   "footer.contact": "Contact",
-  "footer.email": "contact@sakaiintelligence.com",
+  "footer.email": "contact@sakai-intelligence.com",
   "footer.phone": "+1 (555) 123-4567",
   "footer.remote": "Remote and global",
   "footer.rights": "All rights reserved.",
