--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -24,7 +24,7 @@
   "contact.subtitle": "Desde integraciones de IA hasta ingeniería full-stack, diseñamos soluciones que ayudan a las empresas a avanzar más rápido, escalar con inteligencia y operar con claridad. Cuéntanos qué necesitas y te ayudaremos a definir la estrategia adecuada.",
   "contact.getInTouch": "Contactar",
   "contact.email": "Correo electrónico",
-  "contact.emailAddress": "contact@sakaiintelligence.com",
+  "contact.emailAddress": "contact@sakai-intelligence.com",
   "contact.nameRequired": "El nombre es obligatorio",
   "contact.nameMax": "El nombre debe tener menos de 100 caracteres",
   "contact.invalidEmail": "Correo electrónico no válido",
@@ -43,7 +43,7 @@
   "footer.processAuto": "Automatización de procesos",
   "footer.techConsult": "Consultoría técnica",
   "footer.contact": "Contacto",
-  "footer.email": "contact@sakaiintelligence.com",
+  "footer.email": "contact@sakai-intelligence.com",
   "footer.phone": "+34 600 000 000",
   "footer.remote": "Trabajo remoto y global",
   "footer.rights": "Todos los derechos reservados.",
